Feature/clean cluster mapper (#18)
* [clean-cluster-mapper] - Get rid of cluster configuration.

* [clean-cluster-mapper] - Hardcode clusters.

* [clean-cluster-mapper] - Update unit tests.

* [clean-cluster-mapper] - Update mapping to remove unrequired hardcoded clusterMapper.

* [clean-cluster-mapper] - Clean tests.