@@ -1,16 +1,22 @@
 package org.opendevstack.projects_info_service.server.facade;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.opendevstack.projects_info_service.configuration.ClusterConfiguration;
 import org.opendevstack.projects_info_service.server.client.AzureGraphClient;
 import org.opendevstack.projects_info_service.server.client.ProjectWhitelistYmlClient;
-import org.opendevstack.projects_info_service.server.dto.*;
-import org.opendevstack.projects_info_service.server.model.*;
+import org.opendevstack.projects_info_service.server.dto.Link;
+import org.opendevstack.projects_info_service.server.dto.ProjectInfo;
+import org.opendevstack.projects_info_service.server.dto.ProjectInfoMother;
+import org.opendevstack.projects_info_service.server.dto.ProjectPlatforms;
+import org.opendevstack.projects_info_service.server.dto.SectionMother;
+import org.opendevstack.projects_info_service.server.model.OpenshiftProjectCluster;
+import org.opendevstack.projects_info_service.server.model.OpenshiftProjectClusterMother;
+import org.opendevstack.projects_info_service.server.model.PlatformMother;
+import org.opendevstack.projects_info_service.server.model.PlatformsWithTitleMother;
+import org.opendevstack.projects_info_service.server.model.ProjectsWhitelisted;
 import org.opendevstack.projects_info_service.server.security.GroupValidatorService;
 import org.opendevstack.projects_info_service.server.service.EdpProjectsService;
 import org.opendevstack.projects_info_service.server.service.GraphTokenService;
@@ -24,7 +30,6 @@ import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -43,9 +48,6 @@ class ProjectsFacadeTest {
     private MocksService mocksService;
 
     @Mock
-    private ClusterConfiguration clusterConfiguration;
-
-    @Mock
     private PlatformService platformService;
 
     @Mock
@@ -60,22 +62,6 @@ class ProjectsFacadeTest {
     @InjectMocks
     private ProjectsFacade projectsFacade;
 
-    @BeforeEach
-    void setUp() {
-        // given
-        Map<String, String> clusterConfigurationMapper = Map.of(
-                "US_TEST", "us-test",
-                "US", "us-dev, us-aws-east1",
-                "EU", "eu-dev, eu-aws-west1, Europe",
-                "MOTHER", "mother-cluster, mother-cluster-1, mother-cluster-2"
-        );
-
-        when(clusterConfiguration.getMapper()).thenReturn(clusterConfigurationMapper);
-
-        // when
-        projectsFacade.initializeClusterMapper();
-    }
-
     @Test
     void givenAnAzureToken_whenGetProjects_thenReturnListOfProjects() {
         // given
@@ -85,7 +71,7 @@ class ProjectsFacadeTest {
         var azureGroups = new HashSet<>(List.of("group1", "group2", "group3"));
         var edpProjectsInfo = List.of(
                 new OpenshiftProjectCluster("edpc", "eu_dev"),
-                new OpenshiftProjectCluster("devstack", "us_test")
+                new OpenshiftProjectCluster("devstack", "us-test")
         );
 
         var edpProjects = List.of(new ProjectInfo("ATLAS", Collections.emptyList()), new ProjectInfo("EDPP", Collections.emptyList()));
@@ -109,40 +95,6 @@ class ProjectsFacadeTest {
                 .contains(edpProjects.get(0).getProjectKey())
                 .contains(edpProjects.get(1).getProjectKey())
                 .contains(mockProjectKey);
-    }
-
-    @Test
-    void givenAnAzureToken_andThereAreProjectsWithClusters_whenGetProjects_thenReturnListOfProjects_andClustersAreMapped() {
-        // given
-        var userEmail = "pepito";
-        var accessToken = "sample";
-        var graphToken = "graph-token";
-        var azureGroups = new HashSet<>(List.of("group1"));
-        var edpProjectsInfo = List.of(
-                new OpenshiftProjectCluster("edpc", "eu_dev")
-        );
-
-        var edpProjects = List.of(
-                new ProjectInfo("ZHOR", List.of("us-test", "Europe")),
-                new ProjectInfo("ATLAS", List.of("us-aws-east1", "Europe"))
-        );
-
-        when(graphTokenService.getGraphToken(accessToken)).thenReturn(graphToken);
-        when(azureGraphClient.getUserEmail(graphToken)).thenReturn(userEmail);
-        when(azureGraphClient.getUserGroups(graphToken)).thenReturn(azureGroups);
-        when(openShiftProjectService.fetchProjects()).thenReturn(edpProjectsInfo);
-        when(edpProjectsService.filterProjects(azureGroups, edpProjectsInfo)).thenReturn(new HashSet<>(edpProjects));
-        when(mocksService.getProjectsAndClusters(userEmail)).thenReturn(Collections.emptyMap());
-
-        // when
-        Map<String, ProjectInfo> projects = projectsFacade.getProjects(accessToken);
-
-        // then
-        assertThat(projects).isNotNull();
-        assertThat(projects.keySet()).hasSize(2)
-                .containsExactly("ATLAS", "ZHOR");
-        assertThat(projects.get("ATLAS").getClusters()).isNotNull()
-                .containsExactly("EU", "US");
     }
 
     @Test
@@ -174,7 +126,7 @@ class ProjectsFacadeTest {
         // then
         assertThat(projects).isNotNull();
         assertThat(projects.get("ATLAS").getClusters()).isNotNull()
-                .containsExactly("US_TEST");
+                .containsExactly("us-test");
     }
 
     @Test
@@ -319,7 +271,7 @@ class ProjectsFacadeTest {
         var azureGroups = new HashSet<>(List.of("g1", "g2"));
         var edpProjectsInfo = List.of(
                 new OpenshiftProjectCluster("edpc", "eu_dev"),
-                new OpenshiftProjectCluster("devstack", "us_test")
+                new OpenshiftProjectCluster("devstack", "us-test")
         );
 
         var edpProjects = List.of(
@@ -387,42 +339,16 @@ class ProjectsFacadeTest {
     }
 
     @Test
-    void givenUnknownClusterInProjects_whenGetProjects_thenThrowsIllegalArgumentException() {
+    void givenMultipleClustersForProject_whenGetProjects_thenClustersAreMerged() {
         // given
         var accessToken = "token";
         var graphToken = "graph-token";
         var userEmail = "user@example.com";
         var azureGroups = new HashSet<>(List.of("g1"));
 
-        var edpProjectsInfo = List.of(new OpenshiftProjectCluster("any", "eu_dev"));
-
-        // One project has an unknown cluster that is NOT in the mapper
-        var edpProjects = List.of(new ProjectInfo("BAD", List.of("unknown-cluster")));
-
-        when(graphTokenService.getGraphToken(accessToken)).thenReturn(graphToken);
-        when(azureGraphClient.getUserEmail(graphToken)).thenReturn(userEmail);
-        when(azureGraphClient.getUserGroups(graphToken)).thenReturn(azureGroups);
-        when(openShiftProjectService.fetchProjects()).thenReturn(edpProjectsInfo);
-        when(edpProjectsService.filterProjects(azureGroups, edpProjectsInfo)).thenReturn(new HashSet<>(edpProjects));
-        when(mocksService.getProjectsAndClusters(userEmail)).thenReturn(Collections.emptyMap());
-
-        // when // then
-        assertThatThrownBy(() -> projectsFacade.getProjects(accessToken))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("is not recognized");
-    }
-
-    @Test
-    void givenMultipleClustersForProject_whenGetProjects_thenClustersAreMergedAndSanitized() {
-        // given
-        var accessToken = "token";
-        var graphToken = "graph-token";
-        var userEmail = "user@example.com";
-        var azureGroups = new HashSet<>(List.of("g1"));
-
-        var edpProjectsInfo = List.of(new OpenshiftProjectCluster("P1", "eu-dev"));
+        var edpProjectsInfo = List.of(new OpenshiftProjectCluster("P1", "eu"));
         var edpProjects = List.of(
-                new ProjectInfo("P1", List.of("eu-dev")),
+                new ProjectInfo("P1", List.of("eu")),
                 new ProjectInfo("P1", List.of("us-test"))
         );
 
@@ -438,7 +364,7 @@ class ProjectsFacadeTest {
 
         // then
         assertThat(projects).containsKey("P1");
-        assertThat(projects.get("P1").getClusters()).containsExactly("EU", "US_TEST");
+        assertThat(projects.get("P1").getClusters()).containsExactlyInAnyOrder("eu", "us-test");
     }
 
     @Test
@@ -460,10 +386,10 @@ class ProjectsFacadeTest {
     void givenClusterNotConfiguredInPlatformService_whenGetProjectPlatforms_thenFallbackToNextCluster() {
         // given
         var projectKey = "P1";
-        // mapped to US_TEST and EU
+        // mapped to us-test and EU
         var edpProjectsInfo = List.of(
                 new OpenshiftProjectCluster(projectKey, "us-test"),
-                new OpenshiftProjectCluster(projectKey, "eu-dev")
+                new OpenshiftProjectCluster(projectKey, "eu")
         );
 
         when(openShiftProjectService.fetchProjects()).thenReturn(edpProjectsInfo);
@@ -473,11 +399,11 @@ class ProjectsFacadeTest {
         when(platformService.getSections(projectKey, "us-test")).thenThrow(new RuntimeException("Not configured"));
         when(platformService.getPlatforms(projectKey, "us-test")).thenThrow(new RuntimeException("Not configured"));
 
-        // eu-dev succeeds
+        // eu succeeds
         var expectedSections = List.of(SectionMother.of());
         var expectedPlatforms = PlatformsWithTitleMother.of();
-        when(platformService.getSections(projectKey, "eu-dev")).thenReturn(expectedSections);
-        when(platformService.getPlatforms(projectKey, "eu-dev")).thenReturn(expectedPlatforms);
+        when(platformService.getSections(projectKey, "eu")).thenReturn(expectedSections);
+        when(platformService.getPlatforms(projectKey, "eu")).thenReturn(expectedPlatforms);
 
         // when
         ProjectPlatforms result = projectsFacade.getProjectPlatforms(projectKey);
@@ -485,6 +411,6 @@ class ProjectsFacadeTest {
         // then
         assertThat(result).isNotNull();
         assertThat(result.getSections()).hasSize(2); // First section + expectedSection
-        assertThat(result.getSections().get(1)).isEqualTo(expectedSections.get(0));
+        assertThat(result.getSections().get(1)).isEqualTo(expectedSections.getFirst());
     }
 }
